dsh/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dsh
---
apiVersion: v1
kind: Namespace
metadata:
  name: dsh-runners
